--- a/src/style.css
+++ b/src/style.css
@@ -9,3 +9,50 @@ body,
     height: 100%;
     background: ivory;
 }
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    font-family:'Trebuchet MS', sans-serif;
+    padding: 2%
+}
+
+.room {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .room label {
+    text-align: center;
+    font-size: 25px;
+    margin-bottom: 20px;
+  }
+  
+  .room input {
+    width: 200px;
+    height: 30px;
+    border: 2px solid #3b5998;
+    border-radius: 6px;
+    padding-left: 5px;
+    font-size: 20px;
+    text-align: center;
+    margin: 5px;
+  }
+  .room button {
+    width: 210px;
+    height: 40px;
+    border: none;
+    border-radius: 6px;
+    padding-left: 5px;
+    font-size: 20px;
+    text-align: center;
+    margin: 5px;
+    background-color: #3b5998;
+    color: white;
+    cursor: pointer;
+  }
+  
+  .sign-out {
+    margin-top: 50px;
+  }
